--- a/app/views/enquiries/_email.html.erb
+++ b/app/views/enquiries/_email.html.erb
@@ -132,9 +132,5 @@ tinymce.init({
      autosave_ask_before_unload: false
 });
 
-$(function(){
-    imagePreview("email");
-     setColorsFromSession();
-});
-
+actsm("email");
 </script>
