--- a/app/views/enquiries/_enquiry_information.html.erb
+++ b/app/views/enquiries/_enquiry_information.html.erb
@@ -1,110 +1,75 @@
+<!-- New enquiry personal information -->
+                      <h4 class="form-heading">Personal Information</h4>
+                      <br/>
+                      <div class="row row-top">
+                      
+                        <% %w(first_name surname mobile1 mobile2 email1 email2).each do |el| %>
+                        
+                        <%= bs(f,el,"text_field",[nil,4],8,6) %>
+                        
+                        <% end %>
+                        
+                        <div class="col-md-6">
+                          <div class="form-group">
+                            <label class="control-label col-sm-4">Gender</label>
+                            <div class="col-sm-8">
+                              <% {male: 'm', female: 'f'}.each do |i| %>
+                                <%= f.radio_button :gender, i[1] %>
+                                <%= f.label i[0].to_s.strip %>
+                              <% end %>
+                            </div>
+                          </div>
+                        </div>
+                        
+                        <%= bs(f,["date_of_birth",{class: "datepicker"}],"text_field",[nil,4],8,6) %>
+                        
+                        <%= bs(f,[:country_id,Country.order(:name), 
+                                              :id, 
+                                              :name,
+                                              {prompt: "-assign to-"},{}],
+                                              "collection_select",
+                                              [nil,4],8,6) %>
+                                              
+                        <%= bs(f,[:assigned_to,User.order(:first_name), 
+                                              :id, 
+                                              :first_name,
+                                              {prompt: "-assign to-"},{}],
+                                              "collection_select",
+                                              ["Assign To",4],8,6) %>
+                                              
+                        <%= bs(f,[:source_id,StudentSource.order(:name), 
+                                              :id, 
+                                              :name,
+                                              {prompt: "-student source-"},{}],
+                                              "collection_select",
+                                              [nil,4],8,6) %>
+                        
+                        <div class="col-md-6">
+                          <div class="form-group">
+                            <label class="control-label col-sm-4">Score</label>
+                            <div class="col-sm-8">
+                              <%= f.select(:score,
+                                           options_for_select((1..10),5),
+                                           {},
+                                           {class: "form-control"}) %>
+                            </div>
+                          </div>
+                        </div>
+                        
+                        <%= bs(f,[:contact_type_id,ContactType.order(:name), 
+                                              :id, 
+                                              :name,
+                                              {prompt: "-contact type-"},{}],
+                                              "collection_select",
+                                              [nil,4],8,6) %>
+                        
+                        <%= bs(f,[:branch_id,Branch.order(:name), 
+                                              :id, 
+                                              :name,
+                                              {prompt: "-branch-"},{}],
+                                              "collection_select",
+                                              ["Branch",4],8,6) %>
 
-
-          <!-- NEW Enquiry - STARTS -->
-        <div class="boxp box-theme-ch">
-          <div >
-        <!-- Enquiry INFORMATION - STARTS -->
-          <div class="htab">
-             <h6><b>Enquiry Information</b></h6>
-              
-               <%= f.submit "Save",{:class => "btnp fr"} %>
-               <%= f.submit "Save and New",{:class => "btnp fr", :name => 'save_new'} %>
-              <div class="cl"></div>
-        </div><br/>
-          <div class="cols">
-               <div class="col6">
-                    <div class="frbox mand">
-                         <%= f.label "First Name*" %>
-                         <%= f.text_field :first_name,{tabindex: "1",
-                                                       :data => {:maxlength => "",
-                                                                 :minlength => "",
-                                                                 :label => "",
-                                                                 :req => "Y"},
-                                                       :onblur => "validate(this.id,'AS');" } %>
                     </div>
-                    <div class="frbox mand">
-                          <%= f.label "Mobile1*" %>
-                          <%= f.text_field :mobile1,{tabindex: "3",
-                                                     :data => {:maxlength => "",
-                                                                 :minlength => "",
-                                                                 :label => "",
-                                                                 :req => "Y"},
-                                                       :onblur => "validate(this.id,'ANS');"} %>
-                    </div>
-                    <div class="frbox mand">
-                         <%= f.label "Email1*" %>
-                         <%= f.text_field :email1,{tabindex: "5",
-                                                   :data => {:maxlength => "",
-                                                                 :minlength => "",
-                                                                 :label => "",
-                                                                 :req => "Y"},
-                                                       :onblur => "validate(this.id,'E');"} %>
-                    </div>
-                    <div class="frbox mand">
-                         <%= f.label "Gender*" %>
-                         <% {male: 'm', female: 'f'}.each do |i| %>
-                            <%= f.radio_button :gender, i[1] %>
-                            <%= f.label i[0].to_s.strip %>
-                          <% end %>
-                    </div>
-                    <div class="frbox mand">
-                         <%= f.label "country_of_origin*" %>
-                         <%= f.collection_select(:country_id, 
-                                Country.order(:name), 
-                                :id, 
-                                :name) %> &nbsp;&nbsp;
-                    </div>
-                    <div class="frbox">
-                         <%= go_create(f,"student_source","source_id","name",1) %>  
-                    </div>
-                    <div class="frbox">
-                         <%= go_create(f,"contact_type","contact_type_id","name",1) %>  
-                    </div>
-                    
-               </div>
-               <div class="col6">
-                    <div class="frbox mand">
-                         <%= f.label "Surname*" %>
-                         <%= f.text_field :surname,{tabindex: "2",
-                                                    :data => {:maxlength => "",
-                                                                 :minlength => "",
-                                                                 :label => "",
-                                                                 :req => "Y"},
-                                                       :onblur => "validate(this.id,'AS');"} %>
-                    </div>
-                    <div class="frbox">
-                         <%= f.label :mobile2 %>
-                         <%= f.text_field :mobile2,{tabindex: "4"} %>
-                    </div>
-                    <div class="frbox">
-                         <%= f.label :email2 %>
-                         <%= f.text_field :email2,{tabindex: "6"} %>
-                    </div>
-                    <div class="frbox mand">
-                         <%= f.label "Date_of_birth*" %>
-                         <%= f.text_field :date_of_birth,{class: "dateField caltf ",tabindex: "7"} %>
-                    </div>
-                    
-                    <%= fs(f,[:assigned_to, 
-                     User.order(:first_name), 
-                     :id, 
-                     :first_name,
-                     {:prompt => "--User--"}],"collection_select",1,"Assign To") %>
+                        
                      
-                     <div class="frbox">
-                         <%= f.label :score %>
-                         <%= f.select :score,
-                                   options_for_select((1..10),5) %>
-
-                    </div>
-                     
-  <%= f.hidden_field :assigned_by, :value => current_user.id.to_s %> 
-               </div>
-          </div><br/><br/>
-        <!-- ENQUIRY INFORMATION - ENDS -->
-        
-      
-          </div>
-          <!-- NEW REGISTRATION - ENDS -->
-    
-     
