--- a/app/views/enquiries/_preferred_countries.html.erb
+++ b/app/views/enquiries/_preferred_countries.html.erb
@@ -1,28 +1,9 @@
-
-<div class="htab">
-             <h5><b>Preferred countries</b></h5>
-        </div><br/>
-
-<div id="ms-selected-countries" data-country_ids='<%= @enquiry.countries.map &:id %>'></div>
- <div class="cols">
-       <div class="frbox">
-       <label>Search</label>
-       <input type="text" size="25" class="searchKey"/>
-       
-       </div>
-  </div>
+<!-- prefer countries -->
+<h4 class="form-heading">Preferred Countries</h4>
+<br/>  
+  <%= prefer_countries(f.object_name,
+                       "country_ids",
+                       @countries,
+                       (@countries.map{|i| i[1]})) %>
   
-  <div class="frbox" style="height:auto">
-  <label style="padding-right:15px">Preferred countries&nbsp;&nbsp;</label>
-  <div class="field" style="display:inline-block;">
-    <%= select_tag("#{f.object_name}[country_ids][]",
-                   options_for_select(@countries),
-                   {multiple: true,
-                    size: 2,
-                    include_blank: false, 
-                    id: "multiselect"}) %><br/>
-     <a href='#' id='deselect-all' class="btns fr">deselect all</a>
-     <div class="cl"></div>
-     </div>
-     </div>
-  <br/>
+
