--- a/app/views/enquiries/index.html.erb
+++ b/app/views/enquiries/index.html.erb
@@ -11,7 +11,7 @@ $(function(){
               </div>
               <div class="col-md-2">
                 <div class="form-group form-last pull-right">
-                  <button type="submit" class="btn btn-primary">New Enquiry</button>
+                  <%= link_to "New Enquiry",new_enquiry_path, {class: "btn btn-primary"} %>
                 </div>
               </div>
             </div>
