--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -14,7 +14,7 @@
                   </div>
                   <div class="modal-footer">
                     <button type="button"  data-dismiss="modal">Close</button>
-                    <%= button.html_safe %>
+                    <%= button.html_safe rescue nil %>
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
