--- a/app/views/shared/_resources.html.erb
+++ b/app/views/shared/_resources.html.erb
@@ -29,7 +29,16 @@
               <td><%= r.cby %>(<%= r.created_at.strftime("%F %R %p") rescue "Unknown" %>)</td>
               <td><%= r.uby %>(<%= r.updated_at.strftime("%F %R %p") rescue "Unknown" %>)</td>
               <td>
-                <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe, r, method: :delete, data: { confirm: 'Are you sure?' }  %>
+                <% r_name = resource_disp1.downcase.tr(" ","_") %>
+                <%= link_to '<span class="glyphicon glyphicon-edit"></span>'.html_safe, 
+                            "/edit_resource/#{r_name}/#{r.id}",
+                            {remote: true} %>
+                <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe, 
+                            r, 
+                            method: :delete, 
+                            data: { confirm: 'Are you sure?' }  %>
+                
+                
               </td>
             </tr>
           <% end %>
@@ -37,30 +46,10 @@
       </table>
     </div>
 
-    <div class="row">
-      <div class="well">
-        <%= form_for(new_resource, html: {class: 'form-horizontal'}) do |f| %>
-          <h4 class="form-heading">New <%= resource_disp1 %></h4>
-          <div class="form-group">
-            <label for="id_name" class="control-label col-sm-2">Name</label>
-            <div class="col-sm-6">
-              <%= f.text_field :name, {class: 'form-control', size: nil} %>
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="id_des" class="control-label col-sm-2">Description</label>
-            <div class="col-sm-6">
-              <%= f.text_area :desc, {class: 'form-control', cols: nil, rows: nil} %>
-            </div>
-          </div>
-          <div class="form-group form-last">
-            <div class="col-sm-offset-2 col-sm-5">
-              <%= f.submit "Create", {class: "btn btn-primary"} %>
-            </div>
-          </div>
-        <% end %>
-      </div>
-    </div>
+    <%= render 'shared/resource_form', {new_resource: new_resource,
+                                        resource_disp1: resource_disp1} %>
+                                        
+    <div id="tester"></div>
   </div>
 </div>
 
