--- a/app/views/enquiries/_enquiry_information.html.erb
+++ b/app/views/enquiries/_enquiry_information.html.erb
@@ -26,7 +26,7 @@
                         <%= bs(f,[:country_id,Country.order(:name), 
                                               :id, 
                                               :name,
-                                              {prompt: "-assign to-"},{}],
+                                              {prompt: "-country-"},{}],
                                               "collection_select",
                                               [nil,4],8,6) %>
                                               
