--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,7 +81,7 @@
                   <% end %>
                 <% end %>
               </li>
-              <li class="active">
+              <li id="configuration" class="active">
                   <%= link_to "/configuration" do %>
                   <span class="glyphicon glyphicon-list"></span>
                   Configuration
