--- a/app/views/allow_ips/edit.js.erb
+++ b/app/views/allow_ips/edit.js.erb
@@ -1,7 +1,7 @@
-    <% ctnt = (render 'shared/resource_form', {new_resource: @r,
-                                               resource_disp1: @r_name.titleize,
-                                               div: "",
-                                               h: ""}) %>
+  <% ctnt = (render 'form', {new_resource: @allow_ip,
+                             resource_disp1: "Allow Ip",
+                             div: "",
+                             h: ""}) %>
 
   $('#edit-resource-container').html("<%= escape_javascript(render :partial => 'shared/modal',
                                            :locals =>   {id: 'resource-edit', 
@@ -12,4 +12,3 @@
   $('#resource-edit').modal('show');
   
   $('.temp').remove();
-
