--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -1,14 +1,48 @@
-<%= simple_form_for(@branch) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :desc %>
-    <%= f.input :created_by %>
-    <%= f.input :updated_by %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+<!-- edit only branches -->
+<div class="row">
+      <div class="<%= div %>">
+        <%= form_for(new_resource, html: {class: 'form-horizontal'}) do |f| %>
+          <% if h == "New" %>
+              <h4 class="form-heading"><%= h %> <%= resource_disp1 %></h4>
+              <br/>
+          <% end %>
+          <%= bs(f,"name","text_field",[nil,3],6) %>
+          <%= bs(f,[:managed_by,User.order(:first_name), 
+                             :id, 
+                             :first_name,
+                             {prompt: "-user-"},{}],
+                             "collection_select",
+                             [nil,3],6) %>
+          <%= bs(f,[:desc,{class: 'form-control', cols: nil, rows: nil}],"text_area",[nil,3],6) %>
+          <%= bs(f,"email","text_field",[nil,3],6) %>
+          <%= bs(f,"phone","text_field",[nil,3],6) %>
+          <%= bs(f,"fax","text_field",[nil,3],6) %>
+          <%= bs(f,"address_line1","text_field",[nil,3],6) %>
+          <%= bs(f,"address_line2","text_field",[nil,3],6) %>
+          <%= bs(f,"address_post_code","text_field",[nil,3],6) %>
+          <%= bs(f,[:country_id,Country.order(:name), 
+                               :id, 
+                               :name,
+                               {prompt: "-country-"},
+                               {onchange: "prepSelect(this,
+                                                      '.cities_select',
+                                                       '/get_cities/');"}],
+                               "collection_select",
+                               [nil,3],6) %>
+          <%= bs(f,[:city_id,City.order(:name), 
+                             :id, 
+                             :name,
+                             {prompt: "-city-"},
+                             {class: 'cities_select'}],
+                             "collection_select",
+                             [nil,3],6) %>
+         
+          
+          <div class="form-group form-last">
+            <div class="col-sm-offset-3 col-sm-5">
+              <%= f.submit "Save", {class: "btn btn-primary"} %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+</div>
