--- a/app/views/institution_types/_form.html.erb
+++ b/app/views/institution_types/_form.html.erb
@@ -1,14 +1,19 @@
-<%= simple_form_for(@institution_type) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :desc %>
-    <%= f.input :created_by %>
-    <%= f.input :updated_by %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+<!-- edit only institution_types -->
+<div class="row">
+      <div class="<%= div %>">
+        <%= form_for(new_resource, html: {class: 'form-horizontal'}) do |f| %>
+          <% if h == "New" %>
+              <h4 class="form-heading"><%= h %> <%= resource_disp1 %></h4>
+              <br/>
+          <% end %>
+          <%= bs(f,"name","text_field",[nil,3],6) %>
+          <%= bs(f,"educational","check_box",[nil,3],6) %>
+          <%= bs(f,[:desc,{class: 'form-control', cols: nil, rows: nil}],"text_area",[nil,3],6) %>
+          <div class="form-group form-last">
+            <div class="col-sm-offset-3 col-sm-5">
+              <%= f.submit "Save", {class: "btn btn-primary"} %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+</div>
