--- a/app/views/resources/_menu.html.erb
+++ b/app/views/resources/_menu.html.erb
@@ -1,11 +1,11 @@
 <!-- All resources to configure -->
 <div class="col-md-3">
-  <ul class="nav nav-pills nav-stacked">
-      <% [:programme_type,:application_status,:contact_type,
+  <ul class="nav nav-pills nav-stacked sub-menu">
+      <% [  :application_status,:contact_type,
             :course_level,:course_subject,:doc_category,
             :english_level,:enquiry_status,:event_type,
             :exam_type,:qualification,:student_source,
-            :sub_agent,:todo_status,:todo_topic,
+            :todo_status,:todo_topic,
             :institution_type,:institution_group,:contract_doc_category,
             :person_type,:commission_status,:allow_ip,:branch].sort.each do |r| %>
       <% if can? :read, r.to_s.camelize.constantize %>
