--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,67 +1,57 @@
-<script type="text/javascript">
-$(function(){
-   $('li.all_users').addClass('active-tab');
-  activeMM("usersMM");
-  setColorsFromSession();
-
-
- 
-  
-});
-
-</script>
-
-<div class="tab-container">
-<%= render 'users/menus' %>
-<div class="tab-content" style="display:block">
-<div class="boxp box-theme-ch">
-<div class="class="htab"">
-        <h4 >
-        Organizor Users
-        </h4>
+<!-- User index -->
+<div class="main-content">
+<div class="row row-top">
+    <div class="col-md-10">
+      <h3>Users</h3>
+    </div>
+    <div class="col-md-2">
+      <div class="form-group form-last pull-right">
+        <%= link_to "Invite Users", new_user_invitation_path,{class: "btn btn-primary"} %>
+      </div>
+    </div>
 </div>
-        <br/>
-<table class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
-                 <thead>
+
+
+<div class="row">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>First Name</th>
+                <th>Branch</th>
+                <th>Role</th>
+                <th>Email</th>
+                <th>Invitation</th>
+                <th>State</th>
+                <th colspan=2>&nbsp;</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @users.each do |user| %>
+                <% un = user.first_name.nil? ? "Mr. Unknown" : user.first_name %>
                   <tr>
-                                        <th>First Name</th>
-                                        <th>Email</th>
-                                        <th>Role</th>
-                                        <th>Invitation</th>
-                                        <th>State</th>
-                                        <th>Delete</th>
+                    <td><%= link_to un,user  %></td>
+                    <td><%= user.br %></td>
+                    <td><%= user.role.name.titleize rescue "Unassigned" %></td>
+                    <td><%= user.email %></td>
+                    <td><%= user.confirmed_at ? "Accepted" : "Not Accepted" %></td>
+                    <td><%= user.active_for_authentication? ? "Active" : "Inactive" %></td>
+                    <td>
+                    <% if (!user.adm? rescue "OK") %>
+                    <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe,
+                                user, 
+                                method: :delete, 
+                                data: { confirm: 'Are you sure?' } %>
+                    <% end %>
+                    </td>
                   </tr>
-                </thead>
-                <tbody>
-
-        <% @users.each do |user| %>
-          <% un = user.first_name.nil? ? "Mr. Unknown" : user.first_name %>
-          <tr>
-            <td><%= link_to un,user  %></td>
-            <td><b><%= user.email %></b></td>
-            <td><%= user.role.name.titleize rescue "Unassigned" %></td>
-            <td><%= user.confirmed_at ? "Accepted" : "Not Accepted" %></td>
-            <td><b><%= user.active_for_authentication? ? "Active" : "Inactive" %></b></td>
-            <% if (!user.adm? rescue "OK") %>
-            <td>
-            <%= link_to image_tag("/images/icons/del.png"),user, method: :delete, data: { confirm: 'Are you sure?' },asdf: "ASdf"  %>
-            </td>
-            <% end %>
-          </tr>
-
-        <% end %>
-        <tr>
-          <td colspan="7" align="left"></td>
-        </tr>
-
-        </tbody>
-        </table>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
+              <% end %>
+            </tbody>
+          </table>
 </div>
 </div>
-</div>
+
+<script>
+actmm("users");
+</script>
 
 
